added get user api.

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -101,14 +101,19 @@ Polymer({
     		return;
     	}
     	//fire ajax request to check if user name exists 
-        
-        //fire the below function after making the ajax call
+
+        this.fire('t-forgot-password-get-user',{
+            userName : this.$.username.value
+        },{
+            bubbles: true
+        });
+
         this._disableButton(e.currentTarget);
+        this.$.pages.select('securityQuestion');
+    },
 
-
-    	//and then slide to next page accordingly Note this function should ideally go to the on-response function of the ajax call
-    	this.$.pages.select('securityQuestion');
-    	//or this.$.pages.select('emailSent');
+    onGetUserResponse:function (data) {
+        this.$.pages.select('securityQuestion');
     },
 
 
