--- a/demo/index.html
+++ b/demo/index.html
@@ -6,22 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
     <title>t-forgot-password demo</title>
+    <link rel="import" href="../../polymer/polymer.html">
+    <link rel="import" href="../t-get-user-api.html">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../../t-shared-components/theme.html">
     <link rel="import" href="../t-forgot-password.html">
+    <link rel="import" href="../../t-mystique-auth/t-mystique-auth.html">
+    <link rel="import" href="../../t-loader/t-loader.html">
+    <link rel="import" href="../../paper-toast/paper-toast.html">
     <style>
-    html,
-    body {
-    	font-family: 'Open sans';
+    html, body {
+        font-family: 'Open sans';
         height: 100%;
         width: 100%;
         margin: 0;
+    }
+
+    t-loader{
+        left: 50%;
+        top: 50%;
+        position: absolute;
     }
     </style>
 </head>
 
 <body>
-    <t-forgot-password></t-forgot-password>
+    <template is="dom-bind" id="app">
+
+        <t-loader id="loader"></t-loader>
+        <paper-toast id="toast"></paper-toast>
+
+        <t-mystique-auth 
+            id="tokenCall" 
+            name="nxtb2bsite" 
+            url="http://dev-mystiquecode.tavisca.com/api/authentication/authenticate/context" 
+            token-response="{{token}}">
+        </t-mystique-auth>
+
+        <t-get-user-api 
+            id="getUserApi" 
+            on-get-user-api-success="getUserSuccessEventHandler" 
+            on-t-get-user-api-error="registerFailureEventHandler" 
+            api-base-url="http://dev-mystiquecode.tavisca.com/"
+            api-relative-url="api/user" 
+            auth-token="{{token.authenticationToken}}">
+        </t-get-user-api>
+
+        <t-forgot-password
+            id="fgtPassword"
+            on-t-forgot-password-get-user="getUserEventHandler">
+        </t-forgot-password>
+
+    </template>
 </body>
+<script>
+(function(undefined) {
+    var template = document.querySelector('#app');
+
+    template.getUserEventHandler =function (e, data) {
+        this.$.loader.active = true;
+        this.$.getUserApi.getUser(data);
+    };
+
+    template.getUserSuccessEventHandler =function (e, data) {
+        this.$.loader.active = true;
+        this.$.toast.text = "user details fetched successfully!";
+        this.$.toast.open();
+        this.$.fgtPassword.onGetUserResponse(data);
+    };
+
+    template.registerFailureEventHandler =function (e, data) {
+        this.$.loader.active = false;
+        this.$.toast.text = "User not found";
+        this.$.toast.open();
+    };
+
+})();
+</script>
 
 </html>
