--- a/t-reset-password-api.html
+++ b/t-reset-password-api.html
@@ -1,15 +1,15 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../t-shared-lib/t-provider-behavior.html">
-<dom-module id="t-get-user-api">
+<dom-module id="t-reset-password-api">
     <template>
-        <iron-ajax id="ajaxCall" method="GET" content-type="application/json" handle-as="json" verbose>
+        <iron-ajax id="ajaxCall" method="POST" content-type="application/json" handle-as="json" verbose>
         </iron-ajax>
     </template>
 </dom-module>
 <script>
 Polymer({
-    is: "t-get-user-api",
+    is: "t-reset-password-api",
 
     behaviors: [TravelNxt.Behaviors.ProviderBehavior],
 
@@ -18,10 +18,22 @@ Polymer({
         'ajaxCall.error': '_errorCallback'
     },
 
-    getUser: function(data) {
+    updatePassword: function(data) {
         //validate API meta before making a call
         if (this._validateApiMeta()) {
-            this.apiRelativeUrl = "api/User/get/secretkey/" + data.userName;
+            this.apiRelativeUrl = "api/User/reset/password/" + data.userToken;
+            this.$.ajaxCall.body = JSON.stringify({
+                password: data.newPassword
+            });
+            this.$.ajaxCall.url = this._getUrl();
+            this.$.ajaxCall.generateRequest();
+        }
+    },
+
+    updatePasswordMail :function (data) {
+        //validate API meta before making a call
+        if (this._validateApiMeta()) {
+            this.apiRelativeUrl = "api/User/reset/password/mail/" + data.userName;
             this.$.ajaxCall.url = this._getUrl();
             this.$.ajaxCall.generateRequest();
         }
@@ -29,32 +41,32 @@ Polymer({
 
     _successCallback: function(event) {
         if (!event.detail.response || !event.detail.response.status || event.detail.response.status.code == 500)
-            this.fire('t-get-user-api-error', {
+            this.fire('t-reset-password-api-error', {
                 message: 'Operation error occured, please try again.',
                 code: 500
             }, {
                 bubbles: true
             });
         else if (!event.detail.response.status.isSuccessful) {
-            this.fire('t-get-user-api-error', event.detail.response.status, {
+            this.fire('t-reset-password-api-error', event.detail.response.status, {
                 bubbles: true
             });
         } else {
             //do special handling as per api status codes
-            this.fire('t-get-user-api-success', event.detail.response, {
+            this.fire('t-reset-password-api-success', event.detail.response, {
                 bubbles: true
             });
         }
     },
 
     _errorCallback: function(event) {
-        this.fire('t-get-user-api-error', {
+        this.fire('t-reset-password-api-error', {
             message: 'Connection error occured, please try again.',
             code: event.request.status
         }, {
             bubbles: true
         });
-        console.error('t-get-user-api-error', event);
+        console.error('t-reset-password-api-error', event);
     },
 
 });
