--- a/t-verify-secret-key-api.html
+++ b/t-verify-secret-key-api.html
@@ -1,15 +1,15 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../t-shared-lib/t-provider-behavior.html">
-<dom-module id="t-get-user-api">
+<dom-module id="t-verify-secret-key-api">
     <template>
-        <iron-ajax id="ajaxCall" method="GET" content-type="application/json" handle-as="json" verbose>
+        <iron-ajax id="ajaxCall" method="POST" content-type="application/json" handle-as="json" verbose>
         </iron-ajax>
     </template>
 </dom-module>
 <script>
 Polymer({
-    is: "t-get-user-api",
+    is: "t-verify-secret-key-api",
 
     behaviors: [TravelNxt.Behaviors.ProviderBehavior],
 
@@ -18,43 +18,48 @@ Polymer({
         'ajaxCall.error': '_errorCallback'
     },
 
-    getUser: function(data) {
+    verifyAnswer: function(data) {
         //validate API meta before making a call
         if (this._validateApiMeta()) {
-            this.apiRelativeUrl = "api/User/get/secretkey/" + data.userName;
+            this.apiRelativeUrl = "api/Authentication/Authenticate/SecretKey/" + data.userName;
+
             this.$.ajaxCall.url = this._getUrl();
+            this.$.ajaxCall.body = JSON.stringify({
+                Question: data.question,
+                Answer: data.answer
+            });
             this.$.ajaxCall.generateRequest();
         }
     },
 
     _successCallback: function(event) {
         if (!event.detail.response || !event.detail.response.status || event.detail.response.status.code == 500)
-            this.fire('t-get-user-api-error', {
+            this.fire('t-verify-secret-key-api-error', {
                 message: 'Operation error occured, please try again.',
                 code: 500
             }, {
                 bubbles: true
             });
         else if (!event.detail.response.status.isSuccessful) {
-            this.fire('t-get-user-api-error', event.detail.response.status, {
+            this.fire('t-verify-secret-key-api-error', event.detail.response.status, {
                 bubbles: true
             });
         } else {
             //do special handling as per api status codes
-            this.fire('t-get-user-api-success', event.detail.response, {
+            this.fire('t-verify-secret-key-api-success', event.detail.response, {
                 bubbles: true
             });
         }
     },
 
     _errorCallback: function(event) {
-        this.fire('t-get-user-api-error', {
+        this.fire('t-verify-secret-key-api-error', {
             message: 'Connection error occured, please try again.',
             code: event.request.status
         }, {
             bubbles: true
         });
-        console.error('t-get-user-api-error', event);
+        console.error('t-verify-secret-key-api-error', event);
     },
 
 });
