--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -9,6 +9,32 @@
 <link rel="import" href="../neon-animation/animations/slide-from-right-animation.html">
 <link rel="import" href="../neon-animation/animations/slide-left-animation.html">
 <link rel="import" href="../paper-toast/paper-toast.html">
+<!--
+    `t-forgot-password` is a password recovery component used for resetting forgotten password.
+    It provides two ways to reset the password -
+        1. Secret question answer 
+        2. Verification using registered mail
+    If secret question is not configured, email verification will be used by default.
+    
+    following events are fired by this component
+        1. 't-forgot-password-get-user' - sends user name in request
+        2. 't-forgot-password-verify-secret' - sends user name, quesion and answer in request.
+        3. 't-forgot-password-update-password' - sends new password and temporary user token in request
+        4. 't-forgot-password-send-email' - sends email id in request
+
+Example:
+        without event handlers
+        <t-forgot-password></t-forgot-password>
+
+        with event handlers
+        <t-forgot-password
+            id="fgtPassword"
+            on-t-forgot-password-send-email="sendMailEventHandler"
+            on-t-forgot-password-update-password="updatePasswordEventHandler"
+            on-t-forgot-password-verify-secret="verifySecretEventHandler"
+            on-t-forgot-password-get-user="getUserEventHandler">
+        </t-forgot-password>-->
+
 <dom-module id="t-forgot-password">
     <template>
         <style include="travel-element-styles">
@@ -184,7 +210,7 @@ Polymer({
      */
     sendPasswordResetLink: function() {
         this.fire('t-forgot-password-send-email', {
-            userName: this.$.username.value
+            email: this.$.username.value
         }, {
             bubbles: true
         });
