--- a/t-reset-password-api.html
+++ b/t-reset-password-api.html
@@ -1,6 +1,30 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../t-shared-lib/t-provider-behavior.html">
+
+<!--
+    `t-reset-password-api` api is used to component to reset password.
+
+    following events are fired by this component
+        1. 't-reset-password-api-success' - fired om successful api call.
+        2. 't-reset-password-api-error' - fired when api call is faield.
+
+    Uses TravelNxt.Behaviors.ProviderBehavior as its default behavior
+
+Example:
+        without event handlers
+        <t-reset-password-api></t-reset-password-api>
+
+        with event handlers
+        <t-reset-password-api
+            id="updatePassword" 
+            on-t-reset-password-api-success="updatePasswordSuccessEventHandler" 
+            on-t-reset-password-api-error="updatePasswordFailureEventHandler" 
+            api-base-url="http://dev-mystiquecode.tavisca.com/"
+            api-relative-url="api/user" 
+            auth-token="{{token.authenticationToken}}">
+        </t-reset-password-api>-->
+
 <dom-module id="t-reset-password-api">
     <template>
         <iron-ajax id="ajaxCall" method="POST" content-type="application/json" handle-as="json" verbose>
@@ -18,22 +42,23 @@ Polymer({
         'ajaxCall.error': '_errorCallback'
     },
 
+    /* *
+     * This method updates the password using user token
+     * Expects an object with userToken & newPassword properties as required fields.
+     */
     updatePassword: function(data) {
+
+        if(!data || !data.userToken || !data.newPassword){
+            console.error('user token or password can\'t be empty');
+            return;
+        }
+
         //validate API meta before making a call
         if (this._validateApiMeta()) {
             this.apiRelativeUrl = "api/User/reset/password/" + data.userToken;
             this.$.ajaxCall.body = JSON.stringify({
                 password: data.newPassword
             });
-            this.$.ajaxCall.url = this._getUrl();
-            this.$.ajaxCall.generateRequest();
-        }
-    },
-
-    updatePasswordMail :function (data) {
-        //validate API meta before making a call
-        if (this._validateApiMeta()) {
-            this.apiRelativeUrl = "api/User/reset/password/mail/" + data.userName;
             this.$.ajaxCall.url = this._getUrl();
             this.$.ajaxCall.generateRequest();
         }
