--- a/t-reset-password-mail-api.html
+++ b/t-reset-password-mail-api.html
@@ -1,6 +1,30 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../t-shared-lib/t-provider-behavior.html">
+
+<!--
+    `t-reset-password-mail-api` api component is used to send email for resetting password.
+
+    following events are fired by this component
+        1. 't-reset-password-mail-api-success' - fired om successful api call.
+        2. 't-reset-password-mail-api-error' - fired when api call is faield.
+
+    Uses TravelNxt.Behaviors.ProviderBehavior as its default behavior
+
+Example:
+        without event handlers
+        <t-reset-password-mail-api></t-reset-password-mail-api>
+
+        with event handlers
+        <t-reset-password-mail-api
+            id="sendMail" 
+            on-t-reset-password-mail-api-success="sendMailSuccessEventHandler" 
+            on-t-reset-password-mail-api-error="sendMailFailureEventHandler" 
+            api-base-url="http://dev-mystiquecode.tavisca.com/"
+            api-relative-url="api/user" 
+            auth-token="{{token.authenticationToken}}">
+        </t-reset-password-mail-api>-->
+
 <dom-module id="t-reset-password-mail-api">
     <template>
         <iron-ajax id="ajaxCall" method="POST" content-type="application/json" handle-as="json" verbose>
@@ -18,10 +42,20 @@ Polymer({
         'ajaxCall.error': '_errorCallback'
     },
 
-    sendMail :function (data) {
+    /* *
+     * This method sends a password recovery mail to specified email
+     * Expects an object with email property as required field.
+     */
+    sendMail: function(data) {
+
+        if (!data || !data.email) {
+            console.error('email id can\'t be empty');
+            return;
+        }
+
         //validate API meta before making a call
         if (this._validateApiMeta()) {
-            this.apiRelativeUrl = "api/User/reset/password/mail/" + data.userName;
+            this.apiRelativeUrl = "api/User/reset/password/mail/" + data.email;
             this.$.ajaxCall.url = this._getUrl();
             this.$.ajaxCall.generateRequest();
         }
