--- a/t-verify-secret-key-api.html
+++ b/t-verify-secret-key-api.html
@@ -1,6 +1,30 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../t-shared-lib/t-provider-behavior.html">
+
+<!--
+    `t-verify-secret-key-api` api component is used to verify answer for the secret quesion.
+
+    following events are fired by this component
+        1. 't-verify-secret-key-api-success' - fired om successful api call.
+        2. 't-verify-secret-key-api-error' - fired when api call is faield.
+
+    Uses TravelNxt.Behaviors.ProviderBehavior as its default behavior
+
+Example:
+        without event handlers
+        <t-verify-secret-key-api></t-verify-secret-key-api>
+
+        with event handlers
+        <t-verify-secret-key-api 
+            id="verifySecret" 
+            on-t-verify-secret-key-api-success="verifySecretSuccessEventHandler" 
+            on-t-verify-secret-key-api-error="verifySecretFailureEventHandler" 
+            api-base-url="http://dev-mystiquecode.tavisca.com/"
+            api-relative-url="api/user" 
+            auth-token="{{token.authenticationToken}}">
+        </t-verify-secret-key-api>-->
+
 <dom-module id="t-verify-secret-key-api">
     <template>
         <iron-ajax id="ajaxCall" method="POST" content-type="application/json" handle-as="json" verbose>
@@ -18,7 +42,17 @@ Polymer({
         'ajaxCall.error': '_errorCallback'
     },
 
+    /* *
+     * This method verifies the answer provided for the secret question.
+     * Expects an object with userName, question and answer properties as required fields.
+     */
     verifyAnswer: function(data) {
+
+        if (!data || !data.userName || !data.question || !data.answer) {
+            console.error('email id can\'t be empty');
+            return;
+        }
+
         //validate API meta before making a call
         if (this._validateApiMeta()) {
             this.apiRelativeUrl = "api/Authentication/Authenticate/SecretKey/" + data.userName;
