--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -141,6 +141,10 @@ Polymer({
         });
     },
 
+    /* *
+     * This is the call back function envoked when t-get-user-api component responds.
+     * Do not send data argument in case of api call failure
+    */
     onGetUserResponse: function(data) {
         if (data) {
             if (data.result) {
@@ -169,6 +173,10 @@ Polymer({
         });
     },
 
+    /* *
+     * This is the call back function envoked when t-verify-secret-key-api component responds.
+     * Do not send data argument in case of api call failure
+    */
     onGetSecretAnswerResponse: function(data) {
         if (data) {
             this.userToken = data.authenticationToken;
@@ -192,6 +200,10 @@ Polymer({
         });
     },
 
+    /* *
+     * This is the call back function envoked when t-reset-password-mail-api component responds.
+     * Do not send data argument in case of api call failure.
+    */
     onPasswordResetResponse: function(data) {
         //slide to SIGN IN PAGE. Note this function should ideally go to the on-response function of the ajax call
         if (data)
@@ -215,7 +227,11 @@ Polymer({
             bubbles: true
         });
     },
-
+    
+    /* *
+     * This is the call back function envoked when t-reset-password-mail-api component responds.
+     * Do not send data argument in case of api call failure.
+    */
     onEmailSent: function(data) {
         if (data)
             this.$.pages.select('emailSent');
