[Refactor] Get user is generic for logged in user or to get any section
Renamed 'userName' to 'username' for consistency

--- a/demo/index.html
+++ b/demo/index.html
@@ -105,8 +105,9 @@
 
     template.getUserEventHandler =function (e, data) {
         this.$.loader.active = true;
-        this.$.getUserApi.getUser(data);
+        this.$.getUserApi.onGetSecretKey(e);
     };
+
     template.getUserSuccessEventHandler =function (e, data) {
         this.$.loader.active = false;
         this.$.toast.text = data.result 
