--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -135,7 +135,8 @@ Polymer({
         this._disableButton(e.currentTarget);
 
         this.fire('t-forgot-password-get-user', {
-            userName: this.$.username.value
+            username: this.$.username.value,
+            section: 'SecurityQuestionAnswer'
         }, {
             bubbles: true
         });
@@ -165,7 +166,7 @@ Polymer({
         this._disableButton(e.currentTarget);
 
         this.fire('t-forgot-password-verify-secret', {
-            userName: this.$.username.value,
+            username: this.$.username.value,
             question: this.passwordQuestion,
             answer: this.$.securityAnswer.value
         }, {
