--- a/t-reset-password-api.html
+++ b/t-reset-password-api.html
@@ -1,7 +1,6 @@
 <link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../t-shared-lib/t-provider-behavior.html">
-
 <!--
     `t-reset-password-api` api is used to component to reset password.
 
@@ -24,7 +23,6 @@ Example:
             api-relative-url="api/user" 
             auth-token="{{token.authenticationToken}}">
         </t-reset-password-api>-->
-
 <dom-module id="t-reset-password-api">
     <template>
         <iron-ajax id="ajaxCall" method="POST" content-type="application/json" handle-as="json" verbose>
@@ -48,7 +46,7 @@ Polymer({
      */
     updatePassword: function(data) {
 
-        if(!data || !data.userToken || !data.newPassword){
+        if (!data || !data.userToken || !data.newPassword) {
             console.error('user token or password can\'t be empty');
             return;
         }
@@ -56,9 +54,8 @@ Polymer({
         //validate API meta before making a call
         if (this._validateApiMeta()) {
             this.apiRelativeUrl = "api/User/reset/password/" + data.userToken;
-            this.$.ajaxCall.body = JSON.stringify({
-                password: data.newPassword
-            });
+            //password handling as per mystique API request format
+            this.$.ajaxCall.body = '"' + data.newPassword + '"';
             this.$.ajaxCall.url = this._getUrl();
             this.$.ajaxCall.generateRequest();
         }
@@ -73,7 +70,10 @@ Polymer({
                 bubbles: true
             });
         else if (!event.detail.response.status.isSuccessful) {
-            this.fire('t-reset-password-api-error', event.detail.response.status, {
+            this.fire('t-reset-password-api-error', {
+                code: event.detail.response.status.code,
+                message: event.detail.response.status.message
+            }, {
                 bubbles: true
             });
         } else {
