--- a/t-reset-password-mail-api.html
+++ b/t-reset-password-mail-api.html
@@ -84,7 +84,7 @@ Polymer({
     _errorCallback: function(event) {
         this.fire('t-reset-password-mail-api-error', {
             message: 'Connection error occured, please try again.',
-            code: event.request.status
+            code: (event.request && event.request.status) ? event.request.status : ''
         }, {
             bubbles: true
         });
