--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -8,7 +8,7 @@
 <link rel="import" href="../neon-animation/neon-animatable.html">
 <link rel="import" href="../neon-animation/animations/slide-from-right-animation.html">
 <link rel="import" href="../neon-animation/animations/slide-left-animation.html">
-<link rel="import" href="../paper-toast/paper-toast.html">
+<link rel="import" href="../t-notify/t-notify.html">
 <!--
     `t-forgot-password` is a password recovery component used for resetting forgotten password.
     It provides two ways to reset the password -
@@ -34,7 +34,6 @@ Example:
             on-t-forgot-password-verify-secret="verifySecretEventHandler"
             on-t-forgot-password-get-user="getUserEventHandler">
         </t-forgot-password>-->
-
 <dom-module id="t-forgot-password">
     <template>
         <style include="travel-element-styles">
@@ -47,18 +46,13 @@ Example:
         .emailSent-list {
             margin-left: 12px;
         }
-        
-        #toast {
-            --paper-toast-background-color: var(--error-color, #FF0000);
-            --paper-toast-color: white;
-        }
         </style>
-        <paper-toast id="toast" text="No account found with your username"></paper-toast>
+        <t-notify id="notify"></t-notify>
         <neon-animated-pages id="pages" selected="[[selectedPage]]" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation" attr-for-selected="name">
             <neon-animatable name="forgotPassword">
                 <div class="section">
                     <p class="margin-bottom font-14">To help us reset your password, please provide your username</p>
-                    <t-input class="margin-bottom-large" id="username" name="username" label="Username" pattern='^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$' error-message="Please enter a valid email as username" required value="{{username}}"></t-input>
+                    <t-input class="margin-bottom-large" id="username" name="username" label="Username" error-message="Please enter your username" required value="{{username}}"></t-input>
                     <t-button id="btnGetUser" class="primary block" label="Reset My Password" on-tap="_usernameSubmit"></t-button>
                 </div>
             </neon-animatable>
@@ -68,7 +62,7 @@ Example:
                     <t-input class="margin-bottom-large" id="securityAnswer" name="securityAnswer" label="Security Answer" required value="{{securityAnswer}}"></t-input>
                     <t-button id="btnSecurityAnswer" class="primary block margin-bottom" label="Continue" on-tap="_securityAnswerSubmit"></t-button>
                     <p class="font-12 secondary-text">
-                        If you don't rememeber your security answer, please <span class="link-style" on-tap="sendPasswordResetLink">click here</span> to get password reset mail in your inbox.
+                        If you don't rememeber your security answer, please <span class="link-style" on-tap="_sendPasswordResetLink">click here</span> to get password reset mail in your inbox.
                     </p>
                 </div>
             </neon-animatable>
@@ -95,6 +89,7 @@ Example:
 </dom-module>
 <script>
 Polymer({
+
     is: "t-forgot-password",
 
     properties: {
@@ -116,12 +111,137 @@ Polymer({
             type: String,
             value: 'What is your nickname?'
         }
-
-
     },
+
+    //------------------------public methods------------------------
+
+    /* *
+     * This is the call back function envoked when t-get-user-api component responds with success.
+     * If secret wuestion is configured, slide to next window else send password reset email.
+     */
+    onGetUserSuccess: function(response) {
+
+        //[manoj] - do we need to show notification for this?
+        if (!response) {
+            console.error('response can not be null');
+            this._enableButton(this.$.btnGetUser);
+        }
+
+        if (response.result) {
+            this.passwordQuestion = response.result
+            this.$.pages.select('securityQuestion');
+            return;
+        } else {
+            this._sendPasswordResetLink();
+            //[manoj] - change text of button to show processing
+        }
+    },
+
+    /* *
+     * This is the call back function envoked when t-get-user-api component failure.
+     * Notificationis displayed
+     */
+    onGetUserFailure: function(response) {
+        if (!response || !response.message) {
+            console.error('response can not be null');
+            return;
+        }
+        this._showNotification(response);
+        this._enableButton(this.$.btnGetUser);
+    },
+
+    /* *
+     * This is the call back function envoked when t-verify-secret-key-api component responds with success.
+     * Slide to reset password window
+     */
+    onGetSecretAnswerSuccess: function(response) {
+
+        //[manoj] - do we need to show notification for this?
+        if (!response || !response.authenticationToken) {
+            console.error('response can not be null');
+            this._enableButton(this.$.btnSecurityAnswer);
+        } else {
+            this.userToken = response.authenticationToken;
+            this.$.pages.select('newPassword');
+        }
+    },
+
+    /* *
+     * This is the call back function envoked when t-verify-secret-key-api component responds with failure.
+     * Notificationis displayed
+     */
+    onGetSecretAnswerFailure: function(response) {
+        if (!response || !response.message) {
+            console.error('response can not be null');
+            return;
+        }
+        this._showNotification(response);
+        this._enableButton(this.$.btnSecurityAnswer);
+    },
+
+    /* *
+     * This is the call back function envoked when t-reset-password-mail-api component responds with success.
+     * Redirects to sign in page
+     */
+    onPasswordResetSuccess: function(response) {
+
+        //[manoj] - do we need to show notification for this?
+        if (!response) {
+            console.error('response can not be null');
+            this._enableButton(this.$.btnResetPassword);
+        } else
+            this._goSignInPage();
+    },
+
+    /* *
+     * This is the call back function envoked when t-reset-password-mail-api component responds.
+     * Do not send data argument in case of api call failure.
+     */
+    onPasswordResetFailure: function(response) {
+        if (!response || !response.message) {
+            console.error('response can not be null');
+            this._enableButton(this.$.btnResetPassword);
+            return;
+        } else
+            this._goSignInPage();
+    },
+
+    /* *
+     * This is the call back function envoked when t-reset-password-mail-api component responds.
+     * Do not send data argument in case of api call failure.
+     */
+    onPasswordResetLinkSuccess: function(response) {
+
+        //[manoj] - do we need to show notification for this?
+        if (!response) {
+            console.error('response can not be null');
+            this._enableButton(this.$.btnResetPassword);
+        } else
+            this.$.pages.select('emailSent');
+    },
+
+    /* *
+     * This is the call back function envoked when t-reset-password-mail-api component responds.
+     * Do not send data argument in case of api call failure.
+     */
+    onPasswordResetLinkFailure: function(response) {
+        if (!response || !response.message) {
+            console.error('response can not be null');
+            this._enableButton(this.$.btnSecurityAnswer);
+            this._enableButton(this.$.btnGetUser);
+            return;
+        } else
+            this._showNotification(response);
+    },
+
+    //------------------------public methods end------------------------
+
+    //------------------------private methods------------------------
+
     _disableButton: function(element) {
         element.disabled = true;
     },
+
     _enableButton: function(element) {
         element.disabled = false;
     },
@@ -131,7 +251,7 @@ Polymer({
         if (!this.$.username.validate()) {
             return;
         }
-
+        this.$.notify.active = false;
         this._disableButton(e.currentTarget);
 
         this.fire('t-forgot-password-get-user', {
@@ -141,29 +261,13 @@ Polymer({
         });
     },
 
-    /* *
-     * This is the call back function envoked when t-get-user-api component responds.
-     * Do not send data argument in case of api call failure
-    */
-    onGetUserResponse: function(data) {
-        if (data) {
-            if (data.result) {
-                this.passwordQuestion = data.result
-                this.$.pages.select('securityQuestion');
-            } else {
-                this.sendPasswordResetLink();
-            }
-        } else
-            this._enableButton(this.$.btnGetUser);
-    },
-
     _securityAnswerSubmit: function(e) {
         //checking if valid email for username
         if (!this.$.securityAnswer.validate()) {
             return;
         }
         this._disableButton(e.currentTarget);
-
+        this.$.notify.active = false;
         this.fire('t-forgot-password-verify-secret', {
             userName: this.$.username.value,
             question: this.passwordQuestion,
@@ -171,18 +275,6 @@ Polymer({
         }, {
             bubbles: true
         });
-    },
-
-    /* *
-     * This is the call back function envoked when t-verify-secret-key-api component responds.
-     * Do not send data argument in case of api call failure
-    */
-    onGetSecretAnswerResponse: function(data) {
-        if (data) {
-            this.userToken = data.authenticationToken;
-            this.$.pages.select('newPassword');
-        } else
-            this._enableButton(this.$.btnSecurityAnswer);
     },
 
     _newPasswordSubmit: function(e) {
@@ -200,41 +292,31 @@ Polymer({
         });
     },
 
-    /* *
-     * This is the call back function envoked when t-reset-password-mail-api component responds.
-     * Do not send data argument in case of api call failure.
-    */
-    onPasswordResetResponse: function(data) {
-        //slide to SIGN IN PAGE. Note this function should ideally go to the on-response function of the ajax call
-        if (data)
-            this._goSignInPage();
-        else
-            this._enableButton(this.$.btnResetPassword);
-    },
-
     _goSignInPage: function() {
         this.fire('go-signin');
-        // alert('Go to signin page');
+        alert('Go to signin page');
+    },
+
+    _showNotification: function(response) {
+        if (!response || !response.message)
+            return;
+
+        // this.$.notify.message = (response.code+ ' - ' || '')  + response.message;
+        this.$.notify.message = response.message;
+        this.$.notify.active = true;
     },
 
     /* *
      * function to send password reset link.
      */
-    sendPasswordResetLink: function() {
+    _sendPasswordResetLink: function() {
         this.fire('t-forgot-password-send-email', {
             email: this.$.username.value
         }, {
             bubbles: true
         });
-    },
-    
-    /* *
-     * This is the call back function envoked when t-reset-password-mail-api component responds.
-     * Do not send data argument in case of api call failure.
-    */
-    onEmailSent: function(data) {
-        if (data)
-            this.$.pages.select('emailSent');
     }
+
+    //------------------------private methods end------------------------
 });
 </script>
