Fix -- Refactor styles Added functionality to reset to default Added help text when sending mail for reset by click documentation update

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -61,9 +61,14 @@ Example:
                     <p class="margin-bottom font-14">Question: [[passwordQuestion]]</p>
                     <t-input class="margin-bottom-large" id="securityAnswer" name="securityAnswer" label="Security Answer" required value="{{securityAnswer}}"></t-input>
                     <t-button id="btnSecurityAnswer" class="primary block margin-bottom" label="Continue" on-tap="_securityAnswerSubmit"></t-button>
-                    <p class="font-12 secondary-text">
-                        If you don't rememeber your security answer, please <span class="link-style" on-tap="_sendPasswordResetLink">click here</span> to get password reset mail in your inbox.
+                    <p class="font-12 secondary-text margin-bottom-medium">
+                        If you don't rememeber your security answer, please <span class="link-style" on-tap="_clickSendPasswordResetLink">click here</span> to get password reset mail in your inbox.
                     </p>
+                    <template is="dom-if" if="[[_clickedOnMailResetPassword]]">
+                        <div class="font-16 primary-text">
+                            Please wait while we send you an email.
+                        </div>
+                    </template>
                 </div>
             </neon-animatable>
             <neon-animatable name="newPassword">
@@ -194,8 +199,8 @@ Polymer({
     },
 
     /* *
-     * This is the call back function envoked when t-reset-password-mail-api component responds.
-     * Do not send data argument in case of api call failure.
+     * This is the call back function envoked when t-reset-password-mail-api component responds with failure
+     * Notificationis displayed
      */
     onPasswordResetFailure: function(response) {
         if (!response || !response.message) {
@@ -203,15 +208,15 @@ Polymer({
             this._enableButton(this.$.btnResetPassword);
             return;
         } else
-            this._goSignInPage();
+            this._showNotification(response);
     },
 
     /* *
-     * This is the call back function envoked when t-reset-password-mail-api component responds.
-     * Do not send data argument in case of api call failure.
+     * This is the call back function envoked when t-reset-password-mail-api component responds with Success.
+     * Redirects to email sent page
      */
     onPasswordResetLinkSuccess: function(response) {
-
+        this._clickedOnMailResetPassword = false;
         //[manoj] - do we need to show notification for this?
         if (!response) {
             console.error('response can not be null');
@@ -221,10 +226,11 @@ Polymer({
     },
 
     /* *
-     * This is the call back function envoked when t-reset-password-mail-api component responds.
-     * Do not send data argument in case of api call failure.
+     * This is the call back function envoked when t-reset-password-mail-api component responds with failure.
+     * Notificationis displayed
      */
     onPasswordResetLinkFailure: function(response) {
+        this._clickedOnMailResetPassword = false;
         if (!response || !response.message) {
             console.error('response can not be null');
             this._enableButton(this.$.btnSecurityAnswer);
@@ -232,6 +238,24 @@ Polymer({
             return;
         } else
             this._showNotification(response);
+    },
+
+    /**
+     * Reset the forgot password flow. it removes all values and 
+     * enables all button if disable
+     */
+    resetPasswordFlow: function() {
+        var allInput = this.querySelectorAll('t-input');
+        Array.prototype.slice.call(allInput).forEach(function(element,index,array){
+            element.value = null;
+        });
+        var allButton = this.querySelectorAll('t-button');
+        Array.prototype.slice.call(allButton).forEach(function(element,index,array){
+            element.disabled = false;
+        });
+        this._clickedOnMailResetPassword = false;
+        this.$.pages.select('forgotPassword');
+        this.$.notify.active = false;
     },
 
     //------------------------public methods end------------------------
@@ -305,6 +329,15 @@ Polymer({
         // this.$.notify.message = (response.code+ ' - ' || '')  + response.message;
         this.$.notify.message = response.message;
         this.$.notify.active = true;
+    },
+
+    /* *
+     * function to send password reset link.
+     */
+    _clickSendPasswordResetLink: function() {
+        this._sendPasswordResetLink();
+        this.$.notify.active = false;
+        this._clickedOnMailResetPassword = true;
     },
 
     /* *
