[FIX] removed alert and changed the fired event name

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -318,8 +318,7 @@ Polymer({
     },
 
     _goSignInPage: function() {
-        this.fire('go-signin');
-        alert('Go to signin page');
+        this.fire('t-forgot-password-go-signin');
     },
 
     _showNotification: function(response) {
