Added check for disabled button before making API calls.

--- a/t-forgot-password.html
+++ b/t-forgot-password.html
@@ -21,6 +21,7 @@
         2. 't-forgot-password-verify-secret' - sends user name, quesion and answer in request.
         3. 't-forgot-password-update-password' - sends new password and temporary user token in request
         4. 't-forgot-password-send-email' - sends email id in request
+        5. 't-forgot-password-go-signin' - fired on successfult password reset.
 
 Example:
         without event handlers
@@ -119,7 +120,6 @@ Polymer({
     },
 
     //------------------------public methods------------------------
-
     /* *
      * This is the call back function envoked when t-get-user-api component responds with success.
      * If secret wuestion is configured, slide to next window else send password reset email.
@@ -257,11 +257,9 @@ Polymer({
         this.$.pages.select('forgotPassword');
         this.$.notify.active = false;
     },
-
     //------------------------public methods end------------------------
 
     //------------------------private methods------------------------
-
     _disableButton: function(element) {
         element.disabled = true;
     },
@@ -272,9 +270,9 @@ Polymer({
 
     _usernameSubmit: function(e) {
         //checking if valid email for username
-        if (!this.$.username.validate()) {
+        if (!this.$.username.validate() || this.$.btnGetUser.disabled)
             return;
-        }
+
         this.$.notify.active = false;
         this._disableButton(e.currentTarget);
 
@@ -288,9 +286,9 @@ Polymer({
 
     _securityAnswerSubmit: function(e) {
         //checking if valid email for username
-        if (!this.$.securityAnswer.validate()) {
+        if (!this.$.securityAnswer.validate() || this.$.btnSecurityAnswer.disabled)
             return;
-        }
+
         this._disableButton(e.currentTarget);
         this.$.notify.active = false;
         this.fire('t-forgot-password-verify-secret', {
@@ -304,9 +302,9 @@ Polymer({
 
     _newPasswordSubmit: function(e) {
         //checking if valid email for username
-        if (!this.$.newPassword.validate()) {
+        if (!this.$.newPassword.validate() || this.$.btnResetPassword.disabled)
             return;
-        }
+        
         this._disableButton(e.currentTarget);
 
         this.fire('t-forgot-password-update-password', {
@@ -325,23 +323,16 @@ Polymer({
         if (!response || !response.message)
             return;
 
-        // this.$.notify.message = (response.code+ ' - ' || '')  + response.message;
         this.$.notify.message = response.message;
         this.$.notify.active = true;
     },
 
-    /* *
-     * function to send password reset link.
-     */
     _clickSendPasswordResetLink: function() {
         this._sendPasswordResetLink();
         this.$.notify.active = false;
         this._clickedOnMailResetPassword = true;
     },
 
-    /* *
-     * function to send password reset link.
-     */
     _sendPasswordResetLink: function() {
         this.fire('t-forgot-password-send-email', {
             email: this.$.username.value
@@ -349,7 +340,6 @@ Polymer({
             bubbles: true
         });
     }
-
     //------------------------private methods end------------------------
 });
 </script>
